<resources>
    <string name="app_name">Link Wallet</string>
    <string name="wlc">Welcome</string>
    <string name="landing">Please login or sign up to continue using Link Wallet</string>
    <string name="landing2">Start trading crypto now</string>
    <string name="landing3">or login with email</string>
    <string name="signupc">SIGN UP</string>
    <string name="rec">Recover Funds</string>
    <string name="signup">Sign Up</string>
    <string name="sign2">Please sign-up to continue</string>
    <string name="policy">I agree with Privacy Policy</string>
    <string name="sign3"><u>Proceed to Login</u></string>
    <string name="hlog">Already have an account, <u>Proceed to Login</u> </string>
    <string name="login1">Login Now</string>
    <string name="login2">Please login to continue</string>
    <string name="login3">Don\'t have an account, <u>Sign Up</u></string>
    <string name="notyfy">Notifications</string>
    <string name="share_app4">Share the Link Wallet App</string>
    <string name="about4">About Link Wallet</string>
    <string name="share4">Share</string>
    <string name="ve">Verify Email</string>
    <string name="ve2">Enter Link Wallet verification code sent to your mail.</string>
    <string name="ve3">Verify</string>
    <string name="rc">Resend Code</string>
    <string name="see_all">See All</string>
    <string name="cb">You have to agree with privacy policy</string>
    <string name="fc">Featured Currencies</string>
    <string name="ys">You sent</string>
    <string name="yr">You received</string>
    <string name="itn">In total</string>
    <string name="emt">Enter Amount</string>
    <string name="proceed">Proceed</string>
    <string name="sp">Input receipient\'s wallet address and your wallet password</string>
    <string name="sending">You are sending</string>
    <string name="cv">Current Value</string>
    <string name="pos2">Proceed to send</string>
    <string name="done2">Done</string>
    <string name="cl">In what language, should we serve you ?</string>
    <string name="swp">Extras</string>
    <string name="serv_one">Link wallet securely stores your cryptocurrency, select from the available listed coins, create a wallet with a strong password to begin trading cryptocurrencies. Link wallet also provides its users the ability to swap cryptocurrencies at a moderate fee.</string>
    <string name="serv_two">We offer a personalized way for users to trade large block sizes quickly and securely. Our trading desk focuses on more than just Bitcoin OTC trading, we can accommodate crypto to crypto trades on almost any coin listed on Link Wallet.</string>
    <string name="serv_three">Link Wallet has a fully operational instant lending platform with seamless user experience and military-grade security with 256-bit encryption.</string>
    <string name="csv">Current features</string>
    <string name="csw">Coin Swap</string>
    <string name="serv">Services</string>
    <string name="otc_one">Large Crypto OTC Block Trading of Cryptocurrencies</string>
    <string name="fs">Fast Settlement</string>
    <string name="fsn">No 3rd Party, Hassle-Free</string>
    <string name="ptd">Personalized Trading</string>
    <string name="ptdn">1-1 Chat Support</string>
    <string name="loan_one">Instant Access To Crypto Loan</string>
    <string name="qd">Credit Line</string>
    <string name="qdn">Increase your trading balance, for better credit line</string>
    <string name="ic">Instant Credit</string>
    <string name="icn">No Credit Checks</string>
    <string name="swap">Coin Swap</string>
    <string name="sf">Swap From</string>
    <string name="st">Swap To</string>
    <string name="header">Create a <b>Pay As You Go</b> hot wallet now. No contract required.</string>
    <string name="terms">By registering, you agree to Link Wallet\'s</string>
    <string name="terms2">Terms of Use &amp; Pricing</string>
    <string name="reg_already">Already have an account?</string>
    <string name="reg_logintext">Log In</string>
    <string name="currency">$</string>
    <string name="help">Help &amp; Support</string>
    <string name="create"><u>Click here</u> to create your   wallets!</string>
    <string name="hf">First Name</string>
    <string name="hl">Last Name</string>
    <string name="hemail">Email Address (Must be Verified)</string>
    <string name="hp">Password</string>
    <string name="hp2">Confirm Password</string>
    <string name="select">Please Select Your Country</string>
    <string name="need">Need an account?</string>
    <string name="sign">Sign Up |</string>
    <string name="nhelp">Need Help?</string>
    <string name="log_email">Email Address</string>
    <string name="forgot">Forgot password?</string>
    <string name="login">Log in</string>
    <string name="share">Share your wallet address to receive payments</string>
    <string name="share2">SHARE YOUR WALLET ADDRESS :</string>
    <string name="copy">COPY TO CLIPBOARD</string>
    <string name="share3">SHARE ADDRESS</string>
    <string name="scan">SCAN QR CODE</string>
    <string name="forgot_p">Forgot Password</string>
    <string name="submit">Submit</string>
    <string name="forgot_dets">Enter your Email address to receive an email with recovery code</string>
    <string name="back_login">Back to Login</string>
    <string name="select_coin">Select Coin</string>
    <string name="trans_sum">Transaction Summary</string>
    <string name="w_name">Wallet Name:</string>
    <string name="send_amt">Amount :</string>
    <string name="rec_add">Receiving Address:</string>
    <string name="trans_fee">Transaction Fee</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="change_pwd">Change your password here.</string>
    <string name="change_pwd2">Change Password</string>
    <string name="build">1.0.0 (build 1)</string>
    <string name="app_v">App Version</string>
    <string name="about">Learn about Link Wallet Services</string>
    <string name="about2">About Link Wallet</string>
    <string name="fback">Send a feedback about Link Wallet</string>
    <string name="share_app">Share the Link Wallet App</string>
    <string name="fback2">Send Feedback</string>
    <string name="share_app2">Share the Link Wallet App to friends and family</string>
    <string name="get_help">Get help and needed information</string>
    <string name="view_info">View your personal information here.</string>
    <string name="two_fa">Switch to enable or disable 2FA</string>
    <string name="enable">Enable 2-Factor Authentication</string>
    <string name="backup">Create backup phrase for added security</string>
    <string name="backup2">Create Backup Phrase</string>
    <string name="account">Account Settings</string>
    <string name="personal">Personal Information</string>
    <string name="pref">Preferences</string>
    <string name="retrieve">Retrieve</string>
    <string name="logout">Logout</string>
    <string name="lang">Change Language</string>
    <string name="lang2">Select a suitable language</string>
    <string name="curr">Change Currency</string>
    <string name="curr2">Select alternative currency</string>
    <string name="all">All Wallets</string>
    <string name="no_wallet">No Wallet Available</string>
    <string name="new_wallet">Click here to create new wallet</string>
    <string name="date">Date:</string>
    <string name="title">Title</string>
    <string name="txn">Txn ID :</string>
    <string name="view_trans">View Transaction Details</string>
    <string name="view_block">VIEW IN BLOCKCHAIN</string>
    <string name="desc">Description:</string>
    <string name="msg">Message</string>
    <string name="sub">Subject :</string>
    <string name="body">Message Body :</string>
    <string name="wallet_name">Wallet Name</string>
    <string name="bal">Total Balance</string>
    <string name="trans">Your Transactions</string>
    <string name="no_trans">No Transactions Yet.</string>
    <string name="your_trans">Your Transactions Will Appear Here.</string>
    <string name="enter_rec_code">Enter Recovery Code</string>
    <string name="enter_reset">Enter the reset code sent to your mail</string>
    <string name="resend">Resend Code</string>
    <string name="phrase">Backup Phrase </string>
    <string name="backup_note">Copy and securely store your Backup Phrase. It acts like a key to recover your funds if you cant access your device.It can\'t be recovered if lost.</string>
    <string name="do_not">Be careful! Do not share  your backup phrase with anyone as it can be used to access your funds.</string>
    <string name="setup">How do you want to setup your wallet?</string>
    <string name="select_option">Select an option based on your needs and security requirements. Advanced Setup provides enhanced security and will require additional steps in the signing process.</string>
    <string name="self_mng">Self- Managed Hot Wallet</string>
    <string name="c_wallet">Create a wallet for everyday transfers and small balances</string>
    <string name="next">Next</string>
    <string name="w_pwd">Wallet Password</string>
    <string name="w_pwd2">Confirm Wallet Password</string>
    <string name="new_p">Enter your new password</string>
    <string name="current_p">Enter your current password</string>
    <string name="cp">Change Password</string>
    <string name="cp2">Current Password</string>
    <string name="np">New Password</string>
    <string name="cnp">Confirm New Password</string>
    <string name="w_add">Wallet Address</string>
    <string name="new_p2">Create New Password</string>
    <string name="save">Please save your new login password and wallet password to continue</string>
    <string name="enter_np">Enter New Password</string>
    <string name="nwp">New Wallet Password</string>
    <string name="cont">Continue</string>
    <string name="home">Home</string>
    <string name="activity">Activity</string>
    <string name="settings">Settings</string>
    <string name="new_request">Submit a new request</string>
    <string name="no_otc">No Trade Request Records !!</string>
    <string name="tfh">Otc trade history</string>
</resources>