<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#FFF"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sp"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:textAlignment="center"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/undraw_send" />



        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:textSize="14sp"
            android:background="@drawable/field2"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:id="@+id/w_address"
            android:hint="@string/w_add"/>




        <EditText
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:id="@+id/pwd_field"
            android:layout_margin="20dp"
            android:background="@drawable/field2"
            android:padding="10dp"
            android:textSize="14sp"
            android:hint="@string/w_pwd"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/log_btn"
        android:text="@string/proceed"
        android:textColor="#FFF"
        android:textAllCaps="false"
        android:layout_margin="20dp"
        android:id="@+id/button2"/>
</LinearLayout>