<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/rounded_dialog"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/new_p2"
            android:textColor="#000000"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="16sp"
            android:textStyle="bold" />
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/divider"
            />
        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:text="@string/save"
            android:textColor="#000000"
            android:textSize="12sp" />
        <EditText
            android:id="@+id/pwd5"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/field2"
            android:hint="@string/enter_np"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/pwd6"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/field2"
            android:ems="10"
            android:hint="@string/hp2"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="12sp"/>

        <EditText
            android:id="@+id/pwd7"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/field2"
            android:ems="10"
            android:hint="@string/nwp"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/pwd8"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/field2"
            android:ems="10"
            android:hint="@string/w_pwd2"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="12sp" />

        <Button
            android:id="@+id/setnew"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/log_btn"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>