<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Change_Password">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/ic_arrow_back_green_24dp" />

        <TextView
            android:id="@+id/text"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="15dp"
            android:text="@string/cp" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/cp2"
            android:textColor="#000"
            android:textSize="12sp"
            />

       <com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginStart="25dp"
    android:layout_marginEnd="10dp">
        <EditText
            android:id="@+id/ppwd"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:ems="10"
            android:hint="@string/current_p"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="14sp"
            />

</com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView90"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/np"
            android:textColor="#000"
            android:textSize="12sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="10dp">

            <EditText
                android:id="@+id/npwd"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:ems="10"
                android:hint="@string/new_p"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView91"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/cnp"
            android:textColor="#000"
            android:textSize="12sp"
             />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="10dp">

            <EditText
                android:id="@+id/cnpwd"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:ems="10"
                android:hint="@string/hp2"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="12sp"
                 />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/editpwd"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/log_btn"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />



    </LinearLayout>

</LinearLayout>