<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/rounded_dialog"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:text="@string/new_p2"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="9dp"
            android:layout_margin="10dp"
            android:background="@drawable/divider"
            android:layout_below="@id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:text="@string/enter_reset"
            android:textColor="#000000"
            android:layout_below="@id/view" />

        <EditText
            android:id="@+id/pwd3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:layout_below="@id/textView6"
            android:background="@drawable/field2"
            android:ems="10"
            android:hint="@string/enter_np"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="12sp"
            />

        <EditText
            android:id="@+id/pwd4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/field2"
            android:ems="10"
            android:layout_below="@id/pwd3"
            android:hint="@string/hp2"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="12sp"
            />

        <Button
            android:id="@+id/resetpass"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_margin="20dp"
            android:layout_below="@id/pwd4"
            android:background="@drawable/log_btn"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            />
    </RelativeLayout>

</RelativeLayout>